--- a/config.json
+++ b/config.json
@@ -62,8 +62,8 @@
 			"exchange_type": "fanout",
 			"queue":"2",
 			"queue_name":"queuename, queuename",
-			"routing_key": ,
-		},
+			"routing_key": ""
+		}
 	},
 	"threat-intel-lookup": {
 		"enabled": "false",
